# RocketNPC

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
src/: api_req_res.capnp  build.rs  log4rs.yaml  main.rs  ocs365.capnp
src/application/: authenticate.rs  error_handler.rs  mod.rs  validate_token.rs
src/application/transactions/: commit.rs  rollback.rs  start_transaction.rs
src/infrastructure/: mod.rs
src/infrastructure/capnp_client/: mod.rs
src/infrastructure/capnp_rpc/: client.rs
src/infrastructure/security/: jwt_helper.rs
src/model/: api_error.rs  api_request.rs  api_response.rs  authenticate.rs  mod.rs
src/model/transactions/: commit.rs  mod.rs  rollback.rs  start_transaction.rs
