[package]
name = "OCS360API"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[dependencies]
bcrypt = "0.15.1"
capnp = "0.19.6"
capnp-rpc = "0.19.2"
capnpc = "0.19.0"
chrono = {version = "0.4.38", features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.21"
log4rs = "1.3.0"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["tls", "json"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio =  { version = "1.38.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.7.11", features = ["compat"] }
urlencoding = "2.1.3"

[build-dependencies]
capnpc = "*"
